Bump to 1.6; Remove Deprecated Methods.